--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
+    <!-- <link href="../src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="../src/assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="../src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="../src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
+
+    <!-- Template Main CSS File -->
+    <!-- <link href="../src/assets/css/main.css" rel="stylesheet"> -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -14,4 +32,42 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
+  <style>
+    /* CSS personnalisé */
+    body {
+      font: normal normal normal 20px/24px 'Helvetica Neue', sans-serif;
+    }
+  </style>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <!-- Vendor JS Files -->
+  <!-- <script src="../src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../src/assets/vendor/aos/aos.js"></script>
+  <script src="../src/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../src/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../src/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../src/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../src/assets/vendor/php-email-form/validate.js"></script>
+  <script src="../src/assets/vendor/fontawesome-all.min.js"></script>
+  <script src="../src/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../src/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs@1.1.8/dist/purecounter_vanilla.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs@1.1.8/dist/purecounter_vanilla.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-5T/8I2XohDx9cQzWZz3Pb9UNZnhH5FjZP5/2kLqDPZ4r4Zc5dVkpJvX2Jo4ScQe" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js" integrity="sha384-pw8QGu7E4j4Qt0z6JKI0pFlA8E1QYj4V5v5ZxZs+1RiAB6s5XswFuU6r6ht0U6rm" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/glightbox@3.1.6/dist/glightbox.min.js" integrity="sha384-dHqzHGQ7sF77ByxGG/GxY8kD0elTfnC3vmt5MiYfABhlkF8oi6m6IbY5jYH+pcCC" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/purecounterjs@1.1.8/dist/purecounter_vanilla.js" integrity="sha384-Vb2eZm8wKl6Am4tqgEoI5z3Wo9Nz0UV0jQ8xzv8G4rE+xtMYZSw8+Y48qPm1DbmB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8.0.0/swiper-bundle.min.js" integrity="sha384-2oH/Y/Swj8bhzABm5j3D1V1xK6jRY8rr7OiDmc9DzHC7zRg+6gn/Q+OT8sW0T9jt" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/isotope-layout@3.0.6/dist/isotope.pkgd.min.js" integrity="sha384-G7E1Opj5ZxowRH82S8+T3J8UR6L4VV7fvqBfqNACXTU5ZTf+lQ0Wq7nxY7JY+mQF" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/validate.js" integrity="sha384-5OER0FzCjW6FZEF4w8WgWQuC4e04u78tjMZm0W7c/EKz73Oe6GzIcRyRo7nCE7j6r" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" integrity="sha384-4tI85t93wW7QeS2fjrUvdKJ0FECkLOmgK0gRa7mRogPUXZXy6Rs1A+0pQnklF4T2" crossorigin="anonymous"></script> -->
+
+
 </html>
