--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
-    <!-- <link href="../src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="../src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="../src/assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="../src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="../src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
+    <link href="../src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
     <!-- <link href="../src/assets/css/main.css" rel="stylesheet"> -->
@@ -44,7 +44,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <!-- Vendor JS Files -->
-  <!-- <script src="../src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="../src/assets/vendor/aos/aos.js"></script>
   <script src="../src/assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="../src/assets/vendor/purecounter/purecounter_vanilla.js"></script>
@@ -67,7 +67,7 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@8.0.0/swiper-bundle.min.js" integrity="sha384-2oH/Y/Swj8bhzABm5j3D1V1xK6jRY8rr7OiDmc9DzHC7zRg+6gn/Q+OT8sW0T9jt" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/isotope-layout@3.0.6/dist/isotope.pkgd.min.js" integrity="sha384-G7E1Opj5ZxowRH82S8+T3J8UR6L4VV7fvqBfqNACXTU5ZTf+lQ0Wq7nxY7JY+mQF" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/validate.js" integrity="sha384-5OER0FzCjW6FZEF4w8WgWQuC4e04u78tjMZm0W7c/EKz73Oe6GzIcRyRo7nCE7j6r" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" integrity="sha384-4tI85t93wW7QeS2fjrUvdKJ0FECkLOmgK0gRa7mRogPUXZXy6Rs1A+0pQnklF4T2" crossorigin="anonymous"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" integrity="sha384-4tI85t93wW7QeS2fjrUvdKJ0FECkLOmgK0gRa7mRogPUXZXy6Rs1A+0pQnklF4T2" crossorigin="anonymous"></script> 
 
 
 </html>
